Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19241

"Project ERROR" when opening project

XMLWordPrintable

      Each time I open a project in Creator I see the following error message in the "General Messages" view:

      Project ERROR: Cannot run compiler 'cl'. Maybe you forgot to setup the environment?
      Error while parsing file C:\Users\rob\dev\src\creator-4.5-enterprise\qtcreator\tests\manual\debugger\simple\simple.pro. Giving up.

      Building and running the project work fine, though, so the message seems to be pointless. It seems to be caused by QTBUG-62065. Is there anything Creator could do about it?

      Edit: When retrying now, the project can be built, but crashes when running it. Closing and reopening the project fixes this. See comment below.

        For Gerrit Dashboard: QTCREATORBUG-19241
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes